--- a/HCore-Translations/Resources/Messages.resx
+++ b/HCore-Translations/Resources/Messages.resx
@@ -474,4 +474,10 @@
   <data name="cloud_storage_file_not_found" xml:space="preserve">
     <value>The file was not found</value>
   </data>
+  <data name="page_not_found" xml:space="preserve">
+    <value>The page was not found</value>
+  </data>
+  <data name="error_message_is_invalid" xml:space="preserve">
+    <value>The error message is invalid</value>
+  </data>
 </root>
